# blackbird

./: .env  .env.dev  .gitignore  Cargo.toml  Dockerfile  Todos.db  bacon.toml  build.rs  db.db  docker-compose.yml  fly.toml  index.html  package-lock.json  package.json  readme.html  readme.md  rust-analyzer.toml  rustc-ice-2025-04-05T09_10_19-692096.txt  rustc-ice-2025-04-05T09_10_20-692217.txt  rustc-ice-2025-04-05T09_10_20-692220.txt  vite.config.ts
.cargo/: config.toml
.github/copilot/: code-instructions.md
.github/workflows/: fly_deploy.yml
.sqlx/: query-031134bf21abd9fad5163a44a4a5cf45088670311209e6dbc5133777afacf32d.json  query-46cced5ef72ee42127c3e892f22b7bac0f5e82ea382d422115ab5d52660b8526.json  query-5b07fb2203385b406dd22f7c780cfad2c87fdf28f7ced8d13004dca4dd636962.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9a60ae96398dc07faf7360c43ffdbae23577151585dfea78e60dc4f72a49288b.json
art/: readme.md
art/user/default/: comfy.settings.json
art/user/default/ComfyUI-Manager/cache/: 1514988643_custom-node-list.json  4245046894_model-list.json  746607195_github-stats.json  881334633_nodes.json
art/user/default/workflows/: audio_stable.json  hnz_IG2MV_12.json  hy3d_cute_cup.json  hy3d_multiview.json  image_anviserve_person.json  lora_scifi.json  ref_gen_3d.json  t23d-first-edit.json  t23d.json  t2mv_sdxl_ldm.json
assets/models/: RhodesBattlecruiser.glb  kb3d_art_nouveau.glb  kb3d_lunarbase.glb
assets/models/KB3D_LNB_BldgLG_A_grp/: KB3D_LNB_BldgLG_A_grp.gltf
assets/models/ships/: PhalanxCorvette.glb  PraetorGunship.glb  TemplarFrigate.glb
assets/models/terrain/: terrain.glb
assets/ref/: Car.glb  ChatGPT Image Mar 30, 2025, 11_05_35 PM.glb  Dragon.glb  Frieren.glb  Prefab.glb  Prefab_4.glb  Prefabd.glb  bird.glb  boy.glb  bunny.glb  config.ron  girl.glb  mech.glb  mech_2.glb  mech_3.glb  skeleton.glb  starfighter.glb  tank.glb  tank_1.glb  tank_2.glb
assets/shaders/: tmp.wgsl  water.wgsl
assets/textures/skybox/: skybox.ktx2  space.ktx2
config/cloudformation/: debug_notes.md  template.json
config/server/: Dockerfile
crates/app/: Cargo.toml
crates/app/src/: camera.rs  main.rs  spell.rs  ui.rs
crates/asset_processor/: Cargo.toml
crates/asset_processor/src/: main.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  stars.rs
crates/billboard/: Cargo.toml  readme.md
crates/billboard/src/: lib.rs  pipeline.rs  plugin.rs  text.rs  texture.rs  utils.rs
crates/bus/: Cargo.toml  Readme.md
crates/bus/src/: lib.rs  scene.rs
crates/camera/: readme.md
crates/camera/src/: lib.rs  look_angles.rs
crates/camera/src/controllers/: fps.rs  orbit.rs  plane.rs  unreal.rs
crates/cameras/: Cargo.toml
crates/cameras/src/: controllers.rs  lib.rs  look_transform.rs
crates/cameras/src/controllers/: fps.rs  orbit.rs  unreal.rs
crates/common/: Cargo.toml  readme.md
crates/common/src/: lib.rs  ui.rs  water.rs  window_state.rs
crates/editor/: Cargo.toml
crates/editor/src/: fps.rs  lib.rs  prefab.rs  select.rs  selected.rs  stepping.rs
crates/leptos-bevy-canvas/: Cargo.toml  readme.md
crates/leptos-bevy-canvas/src/: app_extension.rs  leptos_component.rs  queries.rs
crates/ref/: Cargo.toml
crates/ref/src/: actions.rs  assets.rs  camera.rs  comfy.rs  components.rs  copy_paste.rs  events.rs  main.rs  prefab.rs  progress.rs  save.rs  select.rs  ui.rs
crates/ref_cli/: Cargo.toml  readme.md
crates/ref_cli/src/: main.rs
crates/window_state/: Cargo.toml
crates/window_state/src/: lib.rs
doc/: art.md  aws_deploy.md  db.md  images.md  notes.md  tracy.md  wasm-bindgen.md  wasm.md
games/breakout/: Cargo.toml
games/breakout/src/: lib.rs  main.rs
games/cast_app/: Cargo.toml
games/cast_app/src/: lib.rs  main.rs  spell.rs  ui.rs
games/mine/: Cargo.toml
games/mine/src/: lib.rs  main.rs
games/orbit/: Cargo.toml
games/orbit/src/: actions.rs  lib.rs  main.rs  music.rs  skybox.rs
games/orbit/src/assets/: mod.rs  stars.rs
games/orbit/src/prefabs/: mod.rs  ships.rs  solar_system.rs
games/orbit/src/scene/: sol.rs
games/orbit/src/states/: hanger.rs  intro.rs  menu.rs  mod.rs  splash.rs
games/orbit/src/ui/: fade.rs  menu.rs  mod.rs  quick.rs
games/orbit/src/ui/widgets/: mod.rs  slider.rs
games/sync_app/: Cargo.toml
games/sync_app/src/: lib.rs  setup.rs  systems.rs
games/tic_tac_toe/: Cargo.toml
games/tic_tac_toe/src/: board.rs  lib.rs  main.rs  ui.rs
games/tic_tac_toe/src/state/: menu.rs  mod.rs  play.rs
games/unidir_events/: Cargo.toml
games/unidir_events/src/: lib.rs  setup.rs  systems.rs
migrations/: 20230226000000_create_todo_table.sql
public/fonts/: inter.css
src/: app.rs  auth.rs  camera.rs  lib.rs  main.rs  todos.rs
src/components/: app_footer.rs  app_nav.rs  card.rs  counter.rs  disclosure.rs  frame.rs  game_canvas.rs  icon.rs  mod.rs  navbar.rs
src/pages/: home.rs  login.rs  mod.rs  settings.rs  signup.rs  todos.rs
src/pages/games/: mod.rs  sync_app.rs  tic_tac_toe.rs  unidir_events.rs
src/routes/: games.rs  home.rs  login.rs  logout.rs  mod.rs  settings.rs  signup.rs  todos.rs
style/: empty.css  tailwind.css
tools/: assets.sh  build_opt.sh  comfy.sh  docker_start.sh
