[package]
name = "sly_common"
version = "0.1.0"
edition = "2021"

[features]
default = []
editor = ["dep:sly_editor"]


[dependencies]
bevy.workspace = true
sly_editor = { workspace = true, optional = true }
bevy-inspector-egui.workspace = true
bevy-persistent = { version = "0.7.0", features = ["ron"] }
serde.workspace = true
dirs = "5.0"

