[package]
name = "sly_editor"
version = "0.1.0"
edition = "2021"

[features]
default = ["fps", "outline" , "avian3d" ]
outline = ["dep:bevy_mod_outline"]
fps = []
avian3d = ["dep:avian3d"]



[dependencies]
sly_camera.workspace = true

bevy = { workspace = true, features = ["bevy_dev_tools", "bevy_debug_stepping"] }
bevy-inspector-egui.workspace = true
bevy_mod_outline = { workspace = true, optional = true }

avian3d = { workspace = true, optional = true }
bevy_hanabi.workspace = true
leafwing-input-manager.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
approx.workspace = true
serde = { workspace = true, features = ["derive"] }


