[package]
name = "sly_editor"
version = "0.1.0"
edition = "2021"

[features]
default = ["fps", "avian3d" ]
fps = []
avian3d = ["dep:avian3d"]


[dependencies]
bevy = { workspace = true, features = ["bevy_dev_tools", "bevy_debug_stepping" ] }
bevy-inspector-egui.workspace = true
avian3d = { workspace = true, optional = true }
leafwing-input-manager.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
approx.workspace = true
serde = { workspace = true, features = ["derive"] }


