[package]
name = "sly_ref"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["sly_common/editor", "bevy/wayland", "bevy/file_watcher", "bevy/asset_processor", "bevy/embedded_watcher"]

[dependencies]
sly_common = { workspace = true, features = ["camera"] }
billboard = { workspace = true }

bevy = { workspace = true }
leafwing-input-manager.workspace = true
avian3d = { workspace = true }
bevy-inspector-egui.workspace = true
bevy_mod_outline.workspace = true
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy-tokio-tasks = "0.15.0"

#bevy_eventwork = "*"
#bevy_eventwork_mod_websockets = "*"

disqualified = "*"
#bevy_asset_loader = { version = "0.22", features = ["2d","3d"] }
#bevy_common_assets = { version = "0.12", features = ["ron" ] }
ron = { version = "0.8" }

strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
approx.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0" }
wl-clipboard-rs = "0.9.2"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
#tungstenite = "*"
url = { version = "2.5" }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "*", features = [ "json", "blocking"] }

