[package]
name = "sly_ref"
version = "0.1.0"
edition = "2021"

[features]
default = ["bevy/wayland", "bevy/file_watcher", "sly_common/editor", "bevy/asset_processor"]
#dev = ["sly_common/editor", "bevy/wayland",  "bevy/asset_processor"]
 #"bevy/embedded_watcher"

[dependencies]
sly_common = { workspace = true, features = ["camera", "ui"] }
sly_editor = { workspace = true, features = ["fps"] }
#billboard = { workspace = true }

bevy = { workspace = true }
leafwing-input-manager.workspace = true
avian3d = { workspace = true }
bevy-inspector-egui.workspace = true
#bevy_mod_outline.workspace = true

#bevy_health_bar3d = { workspace = true}
bevy_health_bar3d = { path = "../../../../f/bevy_health_bar3d" }

#bevy_infinite_grid = { workspace = true}
bevy-tokio-tasks.workspace = true

#bevy_eventwork = "*"
#bevy_eventwork_mod_websockets = "*"

#disqualified = "*"
#bevy_asset_loader = { version = "0.22", features = ["2d","3d"] }
#bevy_common_assets = { version = "0.12", features = ["ron" ] }
#tungstenite = "*"

bevy_rand = { workspace = true }
bevy_prng = { workspace = true, features = ["wyrand"] }
rand.workspace = true

bevy_enhanced_input = { workspace = true, features = ["egui_priority"]}

ron = { version = "0.8" }
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
approx.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wl-clipboard-rs = "0.9.2"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tokio-util = { version = "0.7", features = ["full"] }

url = { version = "2.5" }
uuid = { workspace = true, features = ["v4"] }
reqwest = { version = "*", features = [ "json", "stream", "multipart"] }

