[package]
name = "sly_ref_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# sly_common = { workspace = true, features = ["camera"] }
# billboard = { workspace = true }

# bevy = { workspace = true }
# leafwing-input-manager.workspace = true
# avian3d = { workspace = true }
# bevy-inspector-egui.workspace = true
# bevy_mod_outline.workspace = true
# bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }

# bevy_eventwork = "*"
# bevy_eventwork_mod_websockets = "*"
tungstenite = "*"
url = { version = "2.5.4" }
uuid = { version = "*", features = ["v4"] }
reqwest = { version = "*", features = [ "json", "blocking", "multipart"] }

#bevy_asset_loader = { version = "0.22", features = ["2d","3d"] }
#bevy_common_assets = { version = "0.12", features = ["ron" ] }
# ron = { version = "0.8" }

# strum = { workspace = true, features = ["derive"] }
# strum_macros.workspace = true
# approx.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
#wl-clipboard-rs = "0.9.2"
