[package]
name = "breakout"
version.workspace = true
edition.workspace = true

[features]
default = []
editor = ["sly_common/editor"]


[dependencies]
bevy = { workspace = true, features = [] }
leafwing-input-manager = { workspace = true }
sly_common = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bus = { workspace= true }