[package]
name = "cast_app"
version = "0.1.0"
edition = "2021"

[features]
default = []
editor = ["sly_common/editor"]
web = ["bevy/webgpu"]

[dependencies]
sly_common.workspace = true

bevy.workspace = true
avian3d.workspace = true
bevy_hanabi.workspace = true
leafwing-input-manager.workspace = true
