[package]
name = "cast_app"
version = "0.1.0"
edition = "2021"

[features]
default = []
editor = [ ]
dev = ["sly_common/editor", "bevy/file_watcher", "bevy/asset_processor"]
web = ["bevy/webgpu"]

[dependencies]
sly_common.workspace = true 
bevy = { workspace = true }
avian3d.workspace = true
bevy_hanabi = { workspace = true, default-features = false, features = ["3d"] }
leafwing-input-manager.workspace = true