[package]
name = "sync_app"
version.workspace = true
edition.workspace = true

[features]
default = []
editor = ["sly_common/editor"]


[dependencies]
sly_common = { workspace = true }

bevy-inspector-egui.workspace = true
bevy_rand.workspace = true
console_error_panic_hook.workspace = true
leptos.workspace = true
leptos-bevy-canvas.workspace = true

leptos-use.workspace = true
rand_core.workspace = true

[dependencies.bevy]
workspace = true
features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
    "webgl2"
]